Add password import/export buttons in MD Password Manager settings
This change reimplements the import/export functionality to the PM
settings as it existed in the previous version, before the Material
redesign.

Bug: 674536
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I686dc1152e95bc74ad21c3137b5aebf226801aed

--- a/chrome/browser/ui/BUILD.gn
+++ b/chrome/browser/ui/BUILD.gn
@@ -136,6 +136,7 @@ split_static_library("ui") {
     "passwords/password_manager_porter.h",
     "passwords/password_manager_presenter.cc",
     "passwords/password_manager_presenter.h",
+    "passwords/password_store_interface.h",
     "passwords/password_ui_view.h",
     "permission_bubble/permission_prompt.h",
     "platform_keys_certificate_selector_chromeos.h",
