Servicifying net::MojoProxyResolverFactory.
Making net::MojoProxyResolverFactory a service and removing its use of
UtilityProcessHost.

Bug: 758355
Change-Id: I106f2f3979d41db2ceed554991591653c900ab46

--- a/net/BUILD.gn
+++ b/net/BUILD.gn
@@ -9,6 +9,7 @@ import("//build/config/crypto.gni")
 import("//build/config/features.gni")
 import("//build/config/ui.gni")
 import("//net/features.gni")
+import("//services/service_manager/public/service_manifest.gni")
 import("//testing/libfuzzer/fuzzer_test.gni")
 import("//testing/test.gni")
 import("//third_party/icu/config.gni")
@@ -2737,8 +2738,6 @@ if (enable_net_mojo) {
     sources = [
       "dns/host_resolver_mojo.cc",
       "dns/host_resolver_mojo.h",
-      "proxy/mojo_proxy_resolver_factory_impl.cc",
-      "proxy/mojo_proxy_resolver_factory_impl.h",
       "proxy/mojo_proxy_resolver_impl.cc",
       "proxy/mojo_proxy_resolver_impl.h",
       "proxy/mojo_proxy_resolver_v8_tracing_bindings.h",
@@ -2747,6 +2746,7 @@ if (enable_net_mojo) {
     deps = [
       ":net_with_v8",
       "//base",
+      "//services/service_manager",
     ]
 
     public_deps = [
@@ -5224,6 +5224,7 @@ test("net_unittests") {
     "//net/base/registry_controlled_domains",
     "//net/data/ssl/certificate_transparency:ct_log_list",
     "//net/http:transport_security_state_unittest_data",
+    "//services/service_manager",
     "//testing/gmock",
     "//testing/gtest",
     "//third_party/protobuf:protobuf_lite",
