--- a/chrome/app/BUILD.gn
+++ b/chrome/app/BUILD.gn
@@ -388,6 +388,7 @@ static_library("test_support") {
 chrome_packaged_services = [
   ":chrome_manifest",
   "//chrome/profiling:manifest",
+  "//chrome/utility:network_utility_manifest",
   "//services/preferences:local_state_manifest",
 ]
 
