--- a/chrome/browser/chrome_content_browser_manifest_overlay.json
+++ b/chrome/browser/chrome_content_browser_manifest_overlay.json
@@ -46,6 +46,7 @@
         "nacl_loader": [ "browser" ],
         "profile_import": [ "import" ],
         "profiling": [ "memlog" ],
+        "printing_utility": [ "utility" ],
         "preferences": [ "pref_client", "pref_control" ],
         "ui": [
           "display_controller",
