--- a/ios/chrome/browser/snapshots/BUILD.gn
+++ b/ios/chrome/browser/snapshots/BUILD.gn
@@ -23,6 +23,8 @@ source_set("snapshots") {
     "snapshot_manager.mm",
     "snapshot_overlay.h",
     "snapshot_overlay.mm",
+    "snapshot_tab_helper.h",
+    "snapshot_tab_helper.mm",
     "snapshots_util.h",
     "snapshots_util.mm",
   ]
@@ -34,8 +36,10 @@ source_set("snapshots") {
     "//ios/chrome/browser/browser_state",
     "//ios/chrome/browser/tabs",
     "//ios/chrome/browser/ui",
+    "//ios/chrome/browser/web",
     "//ios/chrome/browser/web_state_list",
     "//ios/web",
+    "//ui/gfx",
   ]
   libs = [ "QuartzCore.framework" ]
   configs += [ "//build/config/compiler:enable_arc" ]
@@ -47,15 +51,22 @@ source_set("unit_tests") {
   sources = [
     "lru_cache_unittest.mm",
     "snapshot_cache_unittest.mm",
+    "snapshot_tab_helper_unittest.mm",
     "snapshots_util_unittest.mm",
   ]
   deps = [
     ":snapshots",
     "//base",
+    "//base/test:test_support",
+    "//ios/chrome/browser/browser_state:test_support",
     "//ios/chrome/browser/ui",
+    "//ios/chrome/browser/web",
     "//ios/web",
     "//ios/web/public/test",
+    "//ios/web/public/test/fakes",
     "//testing/gtest",
+    "//third_party/ocmock",
+    "//ui/gfx",
   ]
 }
 
