--- a/chrome/test/BUILD.gn
+++ b/chrome/test/BUILD.gn
@@ -1272,6 +1272,7 @@ test("browser_tests") {
       "../browser/download/download_browsertest.cc",
       "../browser/download/download_browsertest.h",
       "../browser/download/download_danger_prompt_browsertest.cc",
+      "../browser/download/download_service_browsertest.cc",
       "../browser/download/download_started_animation_browsertest.cc",
       "../browser/download/save_page_browsertest.cc",
       "../browser/fast_shutdown_browsertest.cc",
