Support suspending prefetch processing
Bug: 701930
Change-Id: I5a4cf89fc1ee8ece3ed9ef564ec19f7f174de058

--- a/components/offline_pages/core/BUILD.gn
+++ b/components/offline_pages/core/BUILD.gn
@@ -158,6 +158,7 @@ if (is_android) {
       "downloads/download_ui_item.h",
       "offline_page_types.h",
       "offline_store_types.h",
+      "prefetch/prefetch_types.h",
     ]
   }
 }
