--- a/chrome/android/java_sources.gni
+++ b/chrome/android/java_sources.gni
@@ -278,6 +278,8 @@ chrome_java_sources = [
   "java/src/org/chromium/chrome/browser/crash/MinidumpLogcatPrepender.java",
   "java/src/org/chromium/chrome/browser/crash/MinidumpUploadRetry.java",
   "java/src/org/chromium/chrome/browser/crash/MinidumpUploadService.java",
+  "java/src/org/chromium/chrome/browser/crash/PureJavaExceptionHandler.java",
+  "java/src/org/chromium/chrome/browser/crash/PureJavaExceptionReporter.java",
   "java/src/org/chromium/chrome/browser/customtabs/ClientManager.java",
   "java/src/org/chromium/chrome/browser/customtabs/CustomButtonParams.java",
   "java/src/org/chromium/chrome/browser/customtabs/CustomTabActivity.java",
@@ -1425,6 +1427,7 @@ chrome_test_java_sources = [
   "javatests/src/org/chromium/chrome/browser/contextualsearch/MockContextualSearchPolicy.java",
   "javatests/src/org/chromium/chrome/browser/crash/LogcatExtractionRunnableTest.java",
   "javatests/src/org/chromium/chrome/browser/crash/MinidumpUploadServiceTest.java",
+  "javatests/src/org/chromium/chrome/browser/crash/PureJavaExceptionReporterTest.java",
   "javatests/src/org/chromium/chrome/browser/customtabs/ClientManagerTest.java",
   "javatests/src/org/chromium/chrome/browser/customtabs/CustomTabActivityTest.java",
   "javatests/src/org/chromium/chrome/browser/customtabs/CustomTabActivityTestRule.java",
