--- a/chrome/installer/mini_installer/BUILD.gn
+++ b/chrome/installer/mini_installer/BUILD.gn
@@ -132,6 +132,7 @@ template("generate_mini_installer") {
       "$root_out_dir/chrome.exe",
       "$root_out_dir/locales/en-US.pak",
       "$root_out_dir/setup.exe",
+      "$root_out_dir/v8_context_snapshot.bin",
       release_file,
     ]
 
@@ -175,6 +176,7 @@ template("generate_mini_installer") {
       "//chrome/browser/extensions/default_extensions",
       "//chrome/installer/setup",
       "//third_party/icu:icudata",
+      "//tools/v8_context_snapshot:v8_context_snapshot",
       chrome_dll_target,
     ]
 
