Add net-log to WebView for easier network debugging
The lack of net-log makes it harder to debug network issues. This
CL adds net-log support. The net-log files are created in apps
data directory with default name net_log.json or whatever
is provided in the command line.

webView net_log can only be enabled via command line flag log-net-log


Bug:766167
Change-Id: Ib463e8767eb400a61e5013f82ace6b1c0b212fe1

--- a/android_webview/BUILD.gn
+++ b/android_webview/BUILD.gn
@@ -691,6 +691,7 @@ source_set("common") {
     "//components/metrics:net",
     "//components/metrics:ui",
     "//components/navigation_interception",
+    "//components/net_log",
     "//components/network_session_configurator/common",
     "//components/policy:generated",
     "//components/policy/core/browser",
