--- a/chrome/browser/devtools/BUILD.gn
+++ b/chrome/browser/devtools/BUILD.gn
@@ -29,6 +29,39 @@ action("devtools_protocol_constants") {
   args += [ rebase_path(blink_protocol, root_build_dir) ]
 }
 
+if (!is_android) {
+  _inspector_protocol = "//third_party/inspector_protocol"
+  import("$_inspector_protocol/inspector_protocol.gni")
+
+  _protocol_generated = [
+    "protocol/forward.h",
+    "protocol/protocol.cc",
+    "protocol/protocol.h",
+  ]
+
+  inspector_protocol_generate("protocol_generated_sources") {
+    inspector_protocol_dir = _inspector_protocol
+    visibility = [ ":*" ]  # Only targets in this file can depend on this.
+    deps = [
+      "//third_party/WebKit/Source/core/inspector:protocol_version",
+    ]
+    out_dir = target_gen_dir
+    config_file = "inspector_protocol_config.json"
+
+    _blink_protocol_path =
+        rebase_path("$root_gen_dir/blink/core/inspector/protocol.json",
+                    root_build_dir)
+    config_values = [ "protocol.path=$_blink_protocol_path" ]
+
+    inputs = [
+      "$root_gen_dir/blink/core/inspector/protocol.json",
+      "inspector_protocol_config.json",
+    ]
+
+    outputs = _protocol_generated
+  }
+}
+
 static_library("devtools") {
   # Note: new sources and deps should be generally added in (!is_android) below.
   sources = [
@@ -128,6 +161,15 @@ static_library("devtools") {
         "device/cast_device_provider.h",
       ]
     }
+  }
+
+  if (!is_android) {
+    deps += [ ":protocol_generated_sources" ]
+    sources += [
+      "protocol_string.cc",
+      "protocol_string.h",
+    ]
+    sources += rebase_path(_protocol_generated, ".", target_gen_dir)
   }
 
   if (enable_extensions) {
