[Media Router] Fix compile error if enable_mdns=false
Compile error if build args are set as:

is_debug = true
is_chromecast = false
enable_print_preview = false
enable_basic_printing = false
enable_mdns = false

- remove cloud_print_private_api.* if enable_print_preview=false
- remove chrome/browser/media/router/discovery/mdns/* if enable_service_discovery=false
- add enable_service_discovery check in media_router_mojo_impl code

Not sure if adding those checks in media_router_mojo_impl is the right fix. It minimally affects existing code. Other fix will involve refactoring CastMediaSinkService. Not sure if it worths the effort.

Bug:757530
Change-Id: I97f3a369b0397cebfee8f47dcf93ab31e9685f9f

--- a/chrome/browser/extensions/BUILD.gn
+++ b/chrome/browser/extensions/BUILD.gn
@@ -88,8 +88,6 @@ static_library("extensions") {
     "api/chrome_device_permissions_prompt.h",
     "api/chrome_extensions_api_client.cc",
     "api/chrome_extensions_api_client.h",
-    "api/cloud_print_private/cloud_print_private_api.cc",
-    "api/cloud_print_private/cloud_print_private_api.h",
     "api/command_line_private/command_line_private_api.cc",
     "api/command_line_private/command_line_private_api.h",
     "api/commands/command_service.cc",
@@ -1108,6 +1106,13 @@ static_library("extensions") {
 
   if (enable_hotwording) {
     defines += [ "ENABLE_HOTWORDING" ]
+  }
+
+  if (enable_print_preview) {
+    sources += [
+      "api/cloud_print_private/cloud_print_private_api.cc",
+      "api/cloud_print_private/cloud_print_private_api.h",
+    ]
   }
 
   if (enable_service_discovery) {
