--- a/chrome/test/BUILD.gn
+++ b/chrome/test/BUILD.gn
@@ -2619,6 +2619,7 @@ test("browser_tests") {
         "../browser/printing/print_browsertest.cc",
         "../browser/printing/print_preview_dialog_controller_browsertest.cc",
         "../browser/printing/print_preview_pdf_generated_browsertest.cc",
+        "../browser/printing/pwg_raster_converter_browsertest.cc",
         "../browser/service_process/service_process_control_browsertest.cc",
         "../browser/ui/webui/print_preview/print_preview_ui_browsertest.cc",
       ]
@@ -3843,9 +3844,6 @@ test("unit_tests") {
       "../browser/media/router/discovery/dial/dial_media_sink_service_proxy_unittest.cc",
       "../browser/media/router/discovery/dial/dial_registry_unittest.cc",
       "../browser/media/router/discovery/dial/dial_service_unittest.cc",
-      "../browser/media/router/discovery/mdns/cast_media_sink_service_impl_unittest.cc",
-      "../browser/media/router/discovery/mdns/cast_media_sink_service_unittest.cc",
-      "../browser/media/router/discovery/mdns/dns_sd_registry_unittest.cc",
       "../browser/media/router/discovery/media_sink_discovery_metrics_unittest.cc",
       "../browser/media/router/discovery/media_sink_service_base_unittest.cc",
       "../browser/media/router/event_page_request_manager_unittest.cc",
@@ -4265,7 +4263,12 @@ test("unit_tests") {
       "//tools/json_schema_compiler/test:unit_tests",
     ]
     if (enable_service_discovery) {
-      sources += [ "../browser/extensions/api/mdns/mdns_api_unittest.cc" ]
+      sources += [
+        "../browser/extensions/api/mdns/mdns_api_unittest.cc",
+        "../browser/media/router/discovery/mdns/cast_media_sink_service_impl_unittest.cc",
+        "../browser/media/router/discovery/mdns/cast_media_sink_service_unittest.cc",
+        "../browser/media/router/discovery/mdns/dns_sd_registry_unittest.cc",
+      ]
     }
     if (is_win) {
       sources +=
