Enable arc video encode and decoder accelerator in mus.
Bug: 769755
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Id7580a385c5203e80bc9a15980853fef6e33ac26

--- a/chrome/browser/BUILD.gn
+++ b/chrome/browser/BUILD.gn
@@ -2732,6 +2732,7 @@ split_static_library("browser") {
     deps += [
       "//ash",
       "//chrome/browser/chromeos",
+      "//media/gpu:gpu",
       "//services/ui/public/cpp/input_devices",
       "//services/ui/public/cpp/input_devices:input_device_controller",
       "//ui/ozone",
