--- a/gpu/BUILD.gn
+++ b/gpu/BUILD.gn
@@ -325,6 +325,7 @@ test("gpu_unittests") {
     "config/gpu_util_unittest.cc",
     "ipc/client/gpu_memory_buffer_impl_shared_memory_unittest.cc",
     "ipc/client/gpu_memory_buffer_impl_test_template.h",
+    "ipc/common/gpu_preferences_util_unittest.cc",
     "ipc/common/struct_traits_unittest.cc",
     "ipc/host/shader_disk_cache_unittest.cc",
   ]
