--- a/chrome/android/java_sources.gni
+++ b/chrome/android/java_sources.gni
@@ -1244,6 +1244,7 @@ chrome_java_sources = [
   "java/src/org/chromium/chrome/browser/webapps/WebApkServiceClient.java",
   "java/src/org/chromium/chrome/browser/webapps/WebApkUpdateDataFetcher.java",
   "java/src/org/chromium/chrome/browser/webapps/WebApkUpdateManager.java",
+  "java/src/org/chromium/chrome/browser/webapps/WebApkUpdateTask.java",
   "java/src/org/chromium/chrome/browser/webapps/WebApkVersionManager.java",
   "java/src/org/chromium/chrome/browser/webapps/WebappActionsNotificationManager.java",
   "java/src/org/chromium/chrome/browser/webapps/WebappActivity.java",
