[vr] Add WebVR timeout affordance (not yet for review)
Bug:None
Change-Id: I7a7ddffce46f969e43d91cffee6a0936cf7566d9

--- a/chrome/browser/vr/BUILD.gn
+++ b/chrome/browser/vr/BUILD.gn
@@ -59,6 +59,8 @@ static_library("vr_common") {
     "elements/render_text_wrapper.cc",
     "elements/render_text_wrapper.h",
     "elements/simple_textured_element.h",
+    "elements/spinner.cc",
+    "elements/spinner.h",
     "elements/system_indicator.cc",
     "elements/system_indicator.h",
     "elements/system_indicator_texture.cc",
@@ -141,6 +143,7 @@ static_library("vr_common") {
     "//cc/animation",
     "//cc/paint",
     "//chrome/app:generated_resources",
+    "//chrome/app/vector_icons",
     "//chrome/browser/resources:vr_shell_resources",
     "//components/security_state/core",
     "//components/strings",
