[DevTools] Introduce Target.getWorkers to make it explicit
This gives client an explicit control on how to deal with web worker targets:
- whether to subscribe for created/destroyed events;
- whether to auto-attach;
- whether to wait for debugger on start.

This patch also stops auto-attaching to existing workers and
requires client to do it explicitly.

Bug: none
Change-Id: Ie11acd88e294b0cd850b5b3d077603be7cbc9a57

--- a/content/browser/devtools/protocol_config.json
+++ b/content/browser/devtools/protocol_config.json
@@ -80,7 +80,8 @@
                 "async": ["getInfo"]
             },
             {
-                "domain": "Target"
+                "domain": "Target",
+                "exclude": ["getWorkers"]
             },
             {
                 "domain": "Tethering",
