--- a/chrome/browser/safe_browsing/BUILD.gn
+++ b/chrome/browser/safe_browsing/BUILD.gn
@@ -104,6 +104,8 @@ static_library("safe_browsing") {
       "test_safe_browsing_service.h",
       "ui_manager.cc",
       "ui_manager.h",
+      "v4_get_hash_interceptor.cc",
+      "v4_get_hash_interceptor.h",
     ]
     deps += [
       "//chrome/browser/safe_browsing:chunk_proto",
