--- a/chromecast/base/BUILD.gn
+++ b/chromecast/base/BUILD.gn
@@ -163,6 +163,7 @@ source_set("cast_sys_info") {
     "cast_sys_info_android.h",
     "cast_sys_info_dummy.cc",
     "cast_sys_info_dummy.h",
+    "cast_sys_info_util.cc",
     "cast_sys_info_util.h",
   ]
 
