Add functions to encode GpuPreferences to string and decode it from string.
BUG=774157
TEST=gpu_unittests
R=piman@chromium.org

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Ib4a410443d192cbda369a64d4b59cefb23444f9c

--- a/gpu/ipc/common/BUILD.gn
+++ b/gpu/ipc/common/BUILD.gn
@@ -182,3 +182,14 @@ source_set("struct_traits") {
     "//mojo/public/cpp/bindings:bindings",
   ]
 }
+
+source_set("gpu_preferences_util") {
+  sources = [
+    "gpu_preferences_util.cc",
+    "gpu_preferences_util.h",
+  ]
+  deps = [
+    ":interfaces",
+    "//gpu/command_buffer/service:service_sources",
+  ]
+}
