--- a/gpu/BUILD.gn
+++ b/gpu/BUILD.gn
@@ -325,6 +325,7 @@ test("gpu_unittests") {
     "config/gpu_util_unittest.cc",
     "ipc/client/gpu_memory_buffer_impl_shared_memory_unittest.cc",
     "ipc/client/gpu_memory_buffer_impl_test_template.h",
+    "ipc/common/gpu_preferences_util_unittest.cc",
     "ipc/common/struct_traits_unittest.cc",
     "ipc/host/shader_disk_cache_unittest.cc",
   ]
@@ -364,6 +365,7 @@ test("gpu_unittests") {
     "//gpu/command_buffer/client:gles2_implementation",
     "//gpu/command_buffer/common:gles2_utils",
     "//gpu/ipc:gl_in_process_context",
+    "//gpu/ipc/common:gpu_preferences_util",
     "//gpu/ipc/common:test_interfaces",
     "//gpu/ipc/host",
     "//mojo/edk/system",
