--- a/components/BUILD.gn
+++ b/components/BUILD.gn
@@ -199,6 +199,7 @@ test("components_unittests") {
       "//components/navigation_interception:unit_tests",
       "//components/network_error_logging:unit_tests",
       "//components/network_hints/renderer:unit_tests",
+      "//components/offline_pages:unit_tests",
       "//components/offline_pages/content/background_loader:unit_tests",
       "//components/offline_pages/core:unit_tests",
       "//components/offline_pages/core/background:unit_tests",
