Add experimental support for External Search
Context:
https://docs.google.com/document/d/1o-8Lmj9573jBLF8DuEnChNupL-4OQepUWmj2HkbKb0g

Bug: 775092
Change-Id: I959fbbe7f29e835ae822e54249fba9798ea66118

--- a/ios/chrome/browser/ui/toolbar/keyboard_assist/BUILD.gn
+++ b/ios/chrome/browser/ui/toolbar/keyboard_assist/BUILD.gn
@@ -18,6 +18,7 @@ source_set("keyboard_assist") {
     "toolbar_ui_bar_button_item.mm",
   ]
   deps = [
+    "resources:keyboard_accessory_external_search",
     "resources:keyboard_accessory_qr_scanner",
     "resources:keyboard_accessory_voice_search",
     "//base",
@@ -26,6 +27,9 @@ source_set("keyboard_assist") {
     "//ios/chrome/browser",
     "//ios/chrome/browser/ui",
     "//ios/chrome/browser/ui/commands",
+    "//ios/chrome/browser/ui/external_search:features",
+    "//ios/public/provider/chrome/browser",
+    "//ios/public/provider/chrome/browser/external_search",
     "//ui/base",
     "//ui/gfx",
   ]
