--- a/ios/chrome/browser/providers/BUILD.gn
+++ b/ios/chrome/browser/providers/BUILD.gn
@@ -8,6 +8,8 @@ source_set("providers") {
   sources = [
     "chromium_browser_provider.h",
     "chromium_browser_provider.mm",
+    "chromium_external_search_provider.h",
+    "chromium_external_search_provider.mm",
     "chromium_logo_controller.h",
     "chromium_logo_controller.mm",
     "chromium_spotlight_provider.h",
@@ -17,11 +19,13 @@ source_set("providers") {
   ]
   deps = [
     "//base",
+    "//ios/chrome/app/strings",
     "//ios/chrome/browser/providers/images",
     "//ios/chrome/browser/providers/signin",
     "//ios/chrome/browser/providers/ui",
     "//ios/public/provider/chrome/browser",
     "//ios/public/provider/chrome/browser/distribution",
+    "//ios/public/provider/chrome/browser/external_search",
     "//ios/public/provider/chrome/browser/signin",
     "//ios/public/provider/chrome/browser/spotlight",
     "//ios/public/provider/chrome/browser/ui",
