Add speech recognition API wrapper in VR
This CL adds an invisible button which should trigger voice search.
Note that the UI will change significantly. The main purpose of this
CL is to add speech recognition API wrapper.

Bug: 773767
Change-Id: If760a88cc950b231d3b2c14b94403afd8f23c56b

--- a/chrome/browser/vr/BUILD.gn
+++ b/chrome/browser/vr/BUILD.gn
@@ -107,6 +107,8 @@ source_set("vr_common_source") {
     "service/vr_display_host.h",
     "service/vr_service_impl.cc",
     "service/vr_service_impl.h",
+    "speech_recognizer.cc",
+    "speech_recognizer.h",
     "target_property.cc",
     "target_property.h",
     "toolbar_helper.cc",
@@ -145,11 +147,11 @@ source_set("vr_common_source") {
     "//cc/paint",
     "//chrome/app:generated_resources",
     "//chrome/browser/resources:vr_shell_resources",
+    "//chrome/common:constants",
     "//components/security_state/core",
     "//components/strings",
     "//components/toolbar",
     "//components/url_formatter",
-    "//components/vector_icons",
     "//components/vector_icons",
     "//content/public/browser",
     "//content/public/common",
@@ -207,6 +209,7 @@ test("vr_common_unittests") {
     "fps_meter_unittest.cc",
     "gltf_parser_unittest.cc",
     "service/vr_device_manager_unittest.cc",
+    "speech_recognizer_unittest.cc",
     "test/animation_utils.cc",
     "test/animation_utils.h",
     "test/fake_ui_element_renderer.cc",
@@ -238,6 +241,7 @@ test("vr_common_unittests") {
   deps = [
     ":vr_test_support",
     "//cc:test_support",
+    "//content/test:test_support",
     "//mojo/common",
     "//mojo/public/cpp/bindings",
     "//testing/gmock",
