--- a/services/service_manager/sandbox/BUILD.gn
+++ b/services/service_manager/sandbox/BUILD.gn
@@ -5,6 +5,8 @@
 component("sandbox") {
   sources = [
     "export.h",
+    "sandbox.cc",
+    "sandbox.h",
     "sandbox_delegate.h",
     "sandbox_type.cc",
     "sandbox_type.h",
@@ -40,6 +42,9 @@ component("sandbox") {
     sources += [
       "features.cc",
       "features.h",
+      "win/sandbox_win.cc",
+      "win/sandbox_win.h",
     ]
+    deps += [ "//sandbox/win:sandbox" ]
   }
 }
