[Prototype] Make resource_coordinator/ strongly typed.
This patch:
1. Created one mojo interfece per coordination unit type;
2. Made public API strongly typed;
3. Made internal implementation strongly typed.

BUG=775691

Cq-Include-Trybots: master.tryserver.chromium.linux:linux_site_isolation
Change-Id: I2745671ab7d6d32e6f873f7b57aea9a1ae58c820

--- a/content/public/app/mojo/content_browser_manifest.json
+++ b/content/public/app/mojo/content_browser_manifest.json
@@ -49,7 +49,7 @@
           "payments::mojom::PaymentManager",
           "shape_detection::mojom::BarcodeDetection",
           "shape_detection::mojom::FaceDetectionProvider",
-          "resource_coordinator::mojom::CoordinationUnit",
+          "resource_coordinator::mojom::ProcessCoordinationUnit",
           "shape_detection::mojom::TextDetection",
           "storage::mojom::BlobRegistry",
           "ui::mojom::Gpu",
@@ -157,7 +157,7 @@
           "network::mojom::RestrictedCookieManager",
           "payments::mojom::PaymentManager",
           "payments::mojom::PaymentRequest",
-          "resource_coordinator::mojom::CoordinationUnit",
+          "resource_coordinator::mojom::FrameCoordinationUnit",
           "shape_detection::mojom::BarcodeDetection",
           "shape_detection::mojom::FaceDetectionProvider",
           "shape_detection::mojom::TextDetection",
