Chromecast: Fix test support target name in fuchsia unittest target
Fixes a typo in 026a20aa5f74138d864aa0b40711831818350a52

Bug: 772488
Change-Id: I4433ab3154b681234d9c2f37fe3dcb595d8d86d1

--- a/chromecast/media/cma/backend/fuchsia/BUILD.gn
+++ b/chromecast/media/cma/backend/fuchsia/BUILD.gn
@@ -47,7 +47,7 @@ source_set("unit_tests") {
   ]
   deps = [
     ":fuchsia_cma_backend",
-    "//chromecast/media/cma/backend:test_support",
+    "//chromecast/media/cma:test_support",
     "//testing/gtest",
   ]
 }
