--- a/components/machine_intelligence/BUILD.gn
+++ b/components/machine_intelligence/BUILD.gn
@@ -4,6 +4,10 @@
 
 static_library("machine_intelligence") {
   sources = [
+    "generic_logistic_regression_inference.cc",
+    "generic_logistic_regression_inference.h",
+    "ranker_example_util.cc",
+    "ranker_example_util.h",
     "ranker_model.cc",
     "ranker_model.h",
     "ranker_model_loader.cc",
@@ -25,6 +29,8 @@ source_set("unit_tests") {
   testonly = true
 
   sources = [
+    "generic_logistic_regression_inference_unittest.cc",
+    "ranker_example_util_unittest.cc",
     "ranker_model_loader_unittest.cc",
     "ranker_model_unittest.cc",
   ]
