Draw profile chooser button with GTK when possible
BUG=753067

Change-Id: Iff57d293a04bf2259aa0bb77161b51fec6370289

--- a/ui/views/BUILD.gn
+++ b/ui/views/BUILD.gn
@@ -185,8 +185,8 @@ component("views") {
     "mouse_watcher_view_host.h",
     "native_cursor.h",
     "native_theme_delegate.h",
-    "painter.h",
     "paint_info.h",
+    "painter.h",
     "pointer_watcher.h",
     "rect_based_targeting_utils.h",
     "repeat_controller.h",
@@ -224,6 +224,7 @@ component("views") {
     "widget/widget_deletion_observer.h",
     "widget/widget_observer.h",
     "widget/widget_removals_observer.h",
+    "window/button_background_painter_delegate.h",
     "window/client_view.h",
     "window/custom_frame_view.h",
     "window/dialog_client_view.h",
