Download Service: Setup browser test.
WIP.

Bug:
Change-Id: Ia9c08bcaf4fe48613cf921f9d796eb8efe3922d7

--- a/components/download/internal/test/BUILD.gn
+++ b/components/download/internal/test/BUILD.gn
@@ -4,7 +4,10 @@
 
 # Test target for download internal tests to depend on.
 source_set("test_support") {
-  visibility = [ "//components/download/internal:unit_tests" ]
+  visibility = [
+    "//components/download/content/test:test_support",
+    "//components/download/internal:unit_tests",
+  ]
 
   testonly = true
 
