--- a/ui/android/BUILD.gn
+++ b/ui/android/BUILD.gn
@@ -103,6 +103,7 @@ generate_jni("ui_android_jni_headers") {
 java_cpp_enum("java_enums_srcjar") {
   sources = [
     "../base/ime/text_input_type.h",
+    "../base/menu_source_type.h",
     "../base/page_transition_types.h",
     "../base/touch/touch_device.h",
     "../gfx/android/java_bitmap.h",
