--- a/ui/base/BUILD.gn
+++ b/ui/base/BUILD.gn
@@ -214,6 +214,7 @@ component("base") {
     "layout_mac.mm",
     "material_design/material_design_controller.cc",
     "material_design/material_design_controller.h",
+    "menu_source_type.h",
     "models/button_menu_item_model.cc",
     "models/button_menu_item_model.h",
     "models/combobox_model.cc",
