Testing dependency between browser_tests and v8_context_snasphot.bin
Bug:none
Change-Id: I81e43afe581d785b393798959d2160a2db6353a0

--- a/chrome/test/BUILD.gn
+++ b/chrome/test/BUILD.gn
@@ -1102,6 +1102,7 @@ test("browser_tests") {
     "//printing/features",
     "//rlz/features",
     "//third_party/WebKit/public:features",
+    "//tools/v8_context_snapshot",
   ]
 
   data_deps = [
