--- a/chrome/common/BUILD.gn
+++ b/chrome/common/BUILD.gn
@@ -667,7 +667,6 @@ mojom("mojo_bindings") {
     "chrome_render_frame.mojom",
     "constants.mojom",
     "file_patcher.mojom",
-    "image_context_menu_renderer.mojom",
     "insecure_content_renderer.mojom",
     "navigation_corrector.mojom",
     "net_benchmarking.mojom",
@@ -677,7 +676,6 @@ mojom("mojo_bindings") {
     "prerender.mojom",
     "renderer_configuration.mojom",
     "resource_usage_reporter.mojom",
-    "thumbnail_capturer.mojom",
   ]
 
   if (is_win) {
@@ -692,14 +690,7 @@ mojom("mojo_bindings") {
   }
 
   if (safe_browsing_mode == 1) {
-    sources += [
-      "safe_browsing/phishing_detector.mojom",
-      "safe_browsing/safe_archive_analyzer.mojom",
-    ]
-  }
-
-  if (!is_android) {
-    sources += [ "web_ui_tester.mojom" ]
+    sources += [ "safe_browsing/safe_archive_analyzer.mojom" ]
   }
 
   public_deps = [
