Remove origins from the PermissionService interface messages.
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_site_isolation
Change-Id: I392aa805b7d62816624cd944113c2132832dcf09

--- a/content/public/app/mojo/content_browser_manifest.json
+++ b/content/public/app/mojo/content_browser_manifest.json
@@ -173,18 +173,21 @@
     "navigation:dedicated_worker": {
       "provides": {
         "renderer": [
+          "blink::mojom::PermissionService"
         ]
       }
     },
     "navigation:service_worker": {
       "provides": {
         "renderer": [
+          "blink::mojom::PermissionService"
         ]
       }
     },
     "navigation:shared_worker": {
       "provides": {
         "renderer": [
+          "blink::mojom::PermissionService"
         ]
       }
     }
