WIP: DO NOT SUBMIT: Add GeoLanguageProvider interface
This CL adds the GeoLanguageProvider browser singleton as described in
the design doc:
https://docs.google.com/document/d/18WqVHz5F9vaUiE32E8Ge6QHmku2QSJKvlqB9JjnIM-g

This interface provides a list of language codes corresponding to local
languages based on the device's approximate geolocation derived from
its public IP address, using the PublicIpAddressGeolocator service.
IP geolocation updates are requested no more often than every 24 hours.

This singleton is started up after Profile init in
PreMainMessageLoopRun. The startup runs on a background task runner,
connecting & subscribing to the IP geolocation service. Startup is gated
on the Feature setting "GeoLanguage" which is false for now.

Bug: 76915
Change-Id: I67a0f248508c63246a919ec2800e7c40af35eef8

--- a/components/translate/core/browser/BUILD.gn
+++ b/components/translate/core/browser/BUILD.gn
@@ -47,6 +47,7 @@ static_library("browser") {
     "//base:i18n",
     "//components/data_use_measurement/core",
     "//components/keyed_service/core",
+    "//components/language/content/browser",
     "//components/language/core/browser",
     "//components/language_usage_metrics",
     "//components/machine_intelligence",
