wip add dbus thread
Change-Id: I9a962cc7251f574d278a789fe36c594ae91f655b

--- a/chromeos/BUILD.gn
+++ b/chromeos/BUILD.gn
@@ -629,6 +629,7 @@ test("chromeos_unittests") {
     ":test_support",
     "//base/test:run_all_unittests",
     "//base/test:test_support",
+    "//components/dbus_thread",
     "//components/onc",
     "//components/prefs:test_support",
     "//components/proxy_config",
