👮 Add Android InfoBar for Near-OOM Intervention
Bug: 775850
Change-Id: I455c56989972429bfd17291c6c5d0a2bf8c1d94b

--- a/chrome/android/java_sources.gni
+++ b/chrome/android/java_sources.gni
@@ -492,6 +492,7 @@ chrome_java_sources = [
   "java/src/org/chromium/chrome/browser/infobar/InstantAppsInfoBarDelegate.java",
   "java/src/org/chromium/chrome/browser/infobar/IPHInfoBarSupport.java",
   "java/src/org/chromium/chrome/browser/infobar/FramebustBlockInfoBar.java",
+  "java/src/org/chromium/chrome/browser/infobar/OomInfoBar.java",
   "java/src/org/chromium/chrome/browser/infobar/PermissionInfoBar.java",
   "java/src/org/chromium/chrome/browser/infobar/PermissionUpdateInfoBarDelegate.java",
   "java/src/org/chromium/chrome/browser/infobar/PreviewsInfoBar.java",
@@ -532,6 +533,7 @@ chrome_java_sources = [
   "java/src/org/chromium/chrome/browser/instantapps/InstantAppsHandler.java",
   "java/src/org/chromium/chrome/browser/instantapps/InstantAppsSettings.java",
   "java/src/org/chromium/chrome/browser/interventions/FramebustBlockMessageDelegate.java",
+  "java/src/org/chromium/chrome/browser/interventions/OomMessageDelegate.java",
   "java/src/org/chromium/chrome/browser/interventions/FramebustBlockMessageDelegateBridge.java",
   "java/src/org/chromium/chrome/browser/invalidation/ChromeBrowserSyncAdapter.java",
   "java/src/org/chromium/chrome/browser/invalidation/ChromeBrowserSyncAdapterService.java",
