--- a/chrome/browser/chrome_content_browser_manifest_overlay.json
+++ b/chrome/browser/chrome_content_browser_manifest_overlay.json
@@ -55,7 +55,8 @@
           "ime_registrar",
           "input_device_controller",
           "window_manager"
-        ]
+        ],
+        "util_win" : [ "shell_util_win" ]
       }
     },
     "navigation:frame": {
