Add a fuzzer for zlib's inflate function
We want to cover all of zlib's external APIs.
inflate() currently isn't covered.

BUG=779676

Change-Id: Ic8ea52f189a9870ea643d8d720a8e49f79f85422

--- a/testing/libfuzzer/fuzzers/BUILD.gn
+++ b/testing/libfuzzer/fuzzers/BUILD.gn
@@ -204,6 +204,15 @@ fuzzer_test("gfx_png_image_fuzzer") {
   seed_corpuses = libpng_seed_corpuses
 }
 
+fuzzer_test("zlib_inflate_fuzzer") {
+  sources = [
+    "zlib_inflate_fuzzer.cc",
+  ]
+  deps = [
+    "//third_party/zlib",
+  ]
+}
+
 fuzzer_test("zlib_uncompress_fuzzer") {
   sources = [
     "zlib_uncompress_fuzzer.cc",
