--- a/components/omnibox/browser/BUILD.gn
+++ b/components/omnibox/browser/BUILD.gn
@@ -220,6 +220,12 @@ static_library("test_support") {
     "mock_autocomplete_provider_client.h",
     "shortcuts_provider_test_util.cc",
     "shortcuts_provider_test_util.h",
+    "test_omnibox_client.cc",
+    "test_omnibox_client.h",
+    "test_omnibox_edit_controller.cc",
+    "test_omnibox_edit_controller.h",
+    "test_omnibox_view.cc",
+    "test_omnibox_view.h",
     "test_scheme_classifier.cc",
     "test_scheme_classifier.h",
   ]
@@ -273,7 +279,7 @@ source_set("unit_tests") {
     "in_memory_url_index_types_unittest.cc",
     "in_memory_url_index_unittest.cc",
     "keyword_provider_unittest.cc",
-    "omnibox_edit_unittest.cc",
+    "omnibox_edit_model_unittest.cc",
     "omnibox_field_trial_unittest.cc",
     "omnibox_popup_model_unittest.cc",
     "omnibox_view_unittest.cc",
