[LevelDB] Added CopyPrefixed operation & prefix changing in wrapper
Adds CopyPrefixed operation to leveldb.mojom which copies all data from
a source prefix to a destination prefix, and adds a Control on the
LevelDBWrapper to facilitate changing the prefix (which uses the new
copy operation).

The is a prerequisite to servicification of SessionStorage, which
needs a way to change the prefix of a wrapper after a shallow copy has
occurred.

Bug: 716490
Change-Id: I2ee7f46d2605614ff384f18126933ff13b4a8aed

--- a/content/test/BUILD.gn
+++ b/content/test/BUILD.gn
@@ -189,6 +189,8 @@ static_library("test_support") {
     "dwrite_font_fake_sender_win.h",
     "fake_compositor_dependencies.cc",
     "fake_compositor_dependencies.h",
+    "fake_leveldb_database.cc",
+    "fake_leveldb_database.h",
     "fake_plugin_service.cc",
     "fake_plugin_service.h",
     "fake_renderer_compositor_frame_sink.cc",
@@ -201,8 +203,6 @@ static_library("test_support") {
     "mock_keyboard.h",
     "mock_keyboard_driver_win.cc",
     "mock_keyboard_driver_win.h",
-    "mock_leveldb_database.cc",
-    "mock_leveldb_database.h",
     "mock_overscroll_observer.h",
     "mock_permission_manager.cc",
     "mock_permission_manager.h",
