[vr] Move the controller, laser, and reticle into the UiElement tree
These elements were previously special-cased in UiRenderer. With this
change, the elements are now included in the scene graph permitting
some simplifications and making it easier to, for example, fade out
the controller if desired.

Bug:774501,768512,776521
Change-Id: I5173b0a419a93abe324d496664bdafef933162a5

--- a/chrome/browser/vr/BUILD.gn
+++ b/chrome/browser/vr/BUILD.gn
@@ -20,6 +20,8 @@ static_library("vr_common") {
     "browser_ui_interface.h",
     "color_scheme.cc",
     "color_scheme.h",
+    "controller_mesh.cc",
+    "controller_mesh.h",
     "databinding/binding.h",
     "databinding/binding_base.cc",
     "databinding/binding_base.h",
@@ -33,6 +35,8 @@ static_library("vr_common") {
     "elements/close_button_texture.h",
     "elements/content_element.cc",
     "elements/content_element.h",
+    "elements/controller.cc",
+    "elements/controller.h",
     "elements/draw_phase.h",
     "elements/exclusive_screen_toast.cc",
     "elements/exclusive_screen_toast.h",
@@ -52,12 +56,16 @@ static_library("vr_common") {
     "elements/grid.h",
     "elements/invisible_hit_target.cc",
     "elements/invisible_hit_target.h",
+    "elements/laser.cc",
+    "elements/laser.h",
     "elements/linear_layout.cc",
     "elements/linear_layout.h",
     "elements/rect.cc",
     "elements/rect.h",
     "elements/render_text_wrapper.cc",
     "elements/render_text_wrapper.h",
+    "elements/reticle.cc",
+    "elements/reticle.h",
     "elements/simple_textured_element.h",
     "elements/spinner.cc",
     "elements/spinner.h",
@@ -74,6 +82,7 @@ static_library("vr_common") {
     "elements/ui_element.cc",
     "elements/ui_element.h",
     "elements/ui_element_iterator.h",
+    "elements/ui_element_name.cc",
     "elements/ui_element_name.h",
     "elements/ui_element_transform_operations.cc",
     "elements/ui_element_transform_operations.h",
@@ -131,8 +140,6 @@ static_library("vr_common") {
     "ui_scene_manager.cc",
     "ui_scene_manager.h",
     "ui_unsupported_mode.h",
-    "vr_controller_model.cc",
-    "vr_controller_model.h",
     "vr_gl_util.cc",
     "vr_gl_util.h",
     "vr_shell_renderer.cc",
