--- a/chrome/browser/vr/testapp/BUILD.gn
+++ b/chrome/browser/vr/testapp/BUILD.gn
@@ -15,6 +15,7 @@ executable("vr_testapp") {
 
   deps = [
     "//build/config:exe_and_shlib_deps",
+    "//chrome/browser/resources:vr_shell_resources",
     "//chrome/browser/vr:vr_test_support",
     "//components:components_tests_pak",
     "//components/tracing:startup_tracing",
