--- a/content/public/app/mojo/content_browser_manifest.json
+++ b/content/public/app/mojo/content_browser_manifest.json
@@ -54,8 +54,7 @@
           "resource_coordinator::mojom::CoordinationUnit",
           "shape_detection::mojom::TextDetection",
           "ui::mojom::Gpu",
-          "viz::mojom::SharedBitmapAllocationNotifier",
-          "viz::mojom::CompositingModeReporter"
+          "viz::mojom::SharedBitmapAllocationNotifier"
         ],
         "geolocation_config": [
           "device::mojom::GeolocationConfig"
