Decouple fling booster from input_handler_proxy.
This cl de-couples fling boosting logic from input handler proxy.
The FlingBooster class will be used for browserside fling boosting.

The boosting logic remains unchanged for the most part. The only change
is handling a gesture_scroll_begin while fling cancellation is deferred:
The code used to fliter the GSB only when its target node is the same as
the node that is currently scrolling and cancel the deferred fling
otherwise. With this cl a GSB will always get filtered when a fling
cancellation is deferred.

This change is necessary for using boosting logic in the browser and is
more similar to mac where wheel events with momentum phase are recieved
after a swipe.


Bug:249063
Change-Id: I873e91c1de386c3e253e0744c682b0fc3a7456ae

--- a/ui/events/gestures/blink/BUILD.gn
+++ b/ui/events/gestures/blink/BUILD.gn
@@ -4,6 +4,8 @@
 
 source_set("blink") {
   sources = [
+    "fling_booster.cc",
+    "fling_booster.h",
     "web_gesture_curve_impl.cc",
     "web_gesture_curve_impl.h",
   ]
