--- a/ios/chrome/browser/ui/activity_services/BUILD.gn
+++ b/ios/chrome/browser/ui/activity_services/BUILD.gn
@@ -11,6 +11,8 @@ source_set("activity_services") {
     "activity_type_util.mm",
     "appex_constants.h",
     "appex_constants.mm",
+    "canonical_url_feature.cc",
+    "canonical_url_feature.h",
     "chrome_activity_item_source.h",
     "chrome_activity_item_source.mm",
     "chrome_activity_item_thumbnail_generator.h",
